ajusta layout e regra da tela de dashboard despesas do escritorio